deploy/k8s/consul.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
  namespace: gopaas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
        - name: consul
          image: docker.m.daocloud.io/hashicorp/consul:1.17
          args: ["agent", "-dev", "-client=0.0.0.0", "-ui"]
          ports:
            - containerPort: 8500
---
apiVersion: v1
kind: Service
metadata:
  name: consul
  namespace: gopaas
spec:
  selector:
    app: consul
  ports:
    - name: http
      port: 8500
      targetPort: 8500
